tests/neg/semantic_raw_len_bad_type.baa
// EXPECT: نوع المعامل 1 في 'طول_خام' غير متوافق

#تضمين "stdlib/baalib.baahd"

صحيح الرئيسية() {
    صحيح س = طول_خام("abc").
    إرجع س.
}
